@@ -2,7 +2,7 @@ package Taint::Util;
 use base qw(Exporter);
 use XSLoader ();
 
-$VERSION   = '0.02';
+$VERSION   = '0.03';
 @EXPORT    = qw(tainted taint untaint);
 @EXPORT_OK = @EXPORT;
 
@@ -18,12 +18,14 @@ Taint::Util - Test for and flip the taint flag without regex matches or C<eval>
 
 =head1 SYNOPSIS
 
+    #!/usr/bin/env perl -T
     use Taint::Util;
 
-    my $sv = "pis";
+    # eek!
+    untaint $ENV{PATH};
 
-    # $sv now tainted under taint mode
-    taint $sv;
+    # $sv now tainted under taint mode (-T)
+    taint(my $sv = "hlagh");
 
     # Untaint $sv again
     untaint $sv if tainted $sv;
@@ -35,16 +37,52 @@ and thus does not rely on regular expressions for untainting or odd
 tricks involving C<eval> and C<kill> for checking whether data is
 tainted, instead it checks and flips a flag on the scalar in-place.
 
-Provides three functions, C<tainted> which returns a boolean
-indicating whether a given variable is tainted and C<taint> and
-C<untaint> which always return false and are no-ops if tainting is
-disabled.
+=head1 FUNCTIONS
+
+=head2 tainted
+
+Returns a boolean indicating whether a scalar is tainted. Always false
+when not under taint.
+
+=head2 taint & untaint
+
+Taints or untaints given values, arrays will be flattened and their
+elements tainted, likewise with the values of hashes (keys can't be
+tainted, see L<perlsec>). Returns no value (which evaluates to false).
+
+    untaint(%ENV);                  # Untaints the environment
+    taint(my @hlagh = qw(a o e u)); # elements of @hlagh now tainted
+
+References (being scalars) can also be tainted, a stringified
+reference reference raises an error where a tainted scalar would.
+
+    taint(my $ar = \@hlagh);
+    system echo => $ar;      # err: Insecure dependency in system
+
+The author can't think of any case where tainting references would
+actually be useful.
+
+File handles can also be tainted, but this is equally useless as the
+handle itself and not lines retrieved from it will be tainted.
+
+    taint(*DATA);    # *DATA tainted
+    my $ln = <DATA>; # $ln not tainted
 
 =head1 EXPORTS
 
 Exports C<tainted>, C<taint> and C<untaint> by default. Individual
 functions can be exported by specifying them in the C<use> list, to
 export none use C<()>.
+
+=head1 HISTORY
+
+I wrote this when implementing L<re::engine::Plugin> so that someone
+writing a custom regex engine with it wouldn't have to rely on perl
+regexps for untainting capture variables, which would be a bit odd.
+
+=head1 SEE ALSO
+
+L<perlsec>
 
 =head1 AUTHOR
 
